# notebook

./: .gitignore  pyproject.toml  requirements.txt
0-NLP/: 1_intro.ipynb  2_text_preprocessing.ipynb  3_text_preprocessing.ipynb  intro.ipynb
1-Pydantic/: intro.ipynb
2-Langgraph/: 2_chat_bot.ipynb  3_human_loop.ipynb  4_mcp_integration.ipynb  6_email_automation.ipynb  intro.ipynb
2-Langgraph/5_mcp_demo/: client.py  main.py
2-Langgraph/5_mcp_demo/test/: test_server.py
