[project]
name = "pynb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.4.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "nltk>=3.9.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]
